<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Bank List Activity -->
	<string name="bankListTitle">List of Banks:</string>
    <string name="addBank">Add Bank</string>
    <string name="editBank">Edit Bank</string>
    <string name="deleteBank">Delete Bank</string>
    <string name="bankDeleted">The bank was successfully deleted.</string>
    <string name="showForeignBanks">Show foreign banks</string>
	
	<!-- Bank Edit Activity -->
	<string name="bankName">Bank name:</string><!-- I18N -->
	<string name="phoneNumber">Phone number(s):</string>
	<string name="messagePatterns">Message pattern(s):</string>
	<string name="expiry">Expiry in seconds:</string>
	<string name="btnDone">Done</string>
	<string name="btnCancel">Cancel</string>
	<string name="tooMuchPhoneNumber">A Maximum of 3 phone numbers is allowed.</string>
	<string name="minPhoneNumber">At least 1 phone number is required.</string>
	<string name="tooMuchPattern">A Maximum of 3 patterns is allowed.</string>
	<string name="minPattern">At least 1 pattern is required.</string>
	<string name="specifyBankName">Please specify the bank name.</string>
	<string name="noEmptyPhoneNumber">Empty phone numbers are not allowed.</string>
	<string name="noEmptyExpression">Empty expressions are not allowed.</string>
	<string name="invalidExpression">Invalid regular expression. Please check it again!</string>
	

	<!-- SMS OTP Display Activity -->
	<string name="copyright">SMS Key TM, BankDroid, 2009 (c)</string>
	<string name="clickToClose">Tap or shake to copy and close.</string>
	<string name="menuClear">Clear</string>
	<string name="menuBanks">Banks</string>
	<string name="menuPref">Preferences</string>
	<string name="menuUserGuide">Online Help</string>
	<string name="menuAbout">About</string>
	<string name="app_name">SMS Key TM</string>
	<string name="received.prefix">Received at: </string>
	<string name="countdown.prefix">Remaining time: </string>
	<string name="nocode">-- no code --</string>
	<string name="securityWarning">Verify transaction details in the message before signing the transaction!</string>
	<string name="visitBlog">Visit the SMS Key blog!</string>
	
	<!-- SMS pick activity -->
	<string name="smsListTitle">Please select an SMS containing a one-time password that is already used or expired:</string>
	<string name="selectEmail">Please select an E-mail account:</string>
	<string name="noSMSInInbox">There is no SMS in your inbox.</string>
	<string name="btnHelp">Help</string>
	<string name="emailSubject">SMS OTP Sample</string>
	<string name="emailPrefix">Thank you for submitting sample codes! Please leave the bank phone number and the code unchanged. You may replace personal data in the message.</string>
	<string name="emailOriginator">Bank phone number: </string>
	<string name="emailSMSText">Message text: </string>
	<string name="statText">%1$d banks in %2$d countries!</string>
	<string name="msgKnownSMS">This SMS is already registered. If you receive similar message next time, the application should be activated automatically.</string><!-- I18N -->
	
	<!-- Preferences -->
	<string name="splitCode">Split code</string><!-- I18N -->
	<string name="splitCodeSummary">Split code into blocks for better readability</string><!-- I18N -->
	
	<string name="codeCount">Code count</string>
	<string name="unlockScreen">Unlock screen</string>
	<string name="unlockScreenSummary">Wake up and unlock screen when code arrives. (only for Android 2.0+)</string>
	<string name="keepScreenOn">Keep screen on</string>
	<string name="keepScreenOnSummary">Keep screen on while code is displayed.</string>
	<string name="keepSMS">Keep SMS</string>
	<string name="keepSMSSummary">If selected, the original SMS is kept in messages.</string>
	<string name="notification">Notification only</string>
	<string name="notificationSummary">If selected, the code is not popping up.</string>
	<string name="autoCopy">Copy code automatically</string>
	<string name="autoCopySummary">Automatically the code is copied to the clipboard</string>
	<string name="shakeToCopy">Shake to copy</string><!-- I18N -->
	<string name="shakeToCopySummary">Copy code and close SMS Key on shaking the phone</string><!-- I18N -->
	<string name="playSound">Play sound</string><!-- I18N -->
	<string name="playSoundSummary">Play sound when SMS is received</string><!-- I18N -->
	<string name="resetCampaign">Reset campaign</string><!-- I18N -->
	<string name="resetCampaignSummary">Reset hidden campaigns</string><!-- I18N -->
	<string name="notificationRingtone">Notification ringtone</string><!-- I18N -->
	<string name="notificationRingtoneSummary">Ringtone to play when code is received</string><!-- I18N -->
	<string name="resetDb">Reset bank-db</string>
	<string name="resetDbSummary">Clean up DB content (custom banks will be deleted!)</string>
	<string name="developerPrefs">Developer Preferences</string>
	<string name="genericPrefs">Generic Preferences</string>
	<string name="msgDbReset">The Bank DB was reset successfully.</string><!-- I18N -->
	<string name="msgCampaignReset">The hidden campaigns were reset successfully.</string>
	<string name="msgAreYouSure">Are you sure?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	
	<!-- Notification -->
	<string name="notificationTicker">Password received from {0}</string>
	<string name="notificationTitle">SMS Key TM</string>
	<string name="notificationText">Password received from {0}. Click here to view it.</string>
	
	<!-- Main -->
	<string name="mainTitle">SMS Key TM</string>
	<string name="btnViewLast">View Last Code</string>
	<string name="btnManageBanks">Manage Banks</string>
	<string name="btnSubmitSample">Submit Sample</string>
	<string name="btnInfoSite">Online Help</string>
	<string name="descViewLast">Recall the last SMS code.</string>
	<string name="descManageBanks">Maintain banks yourself...</string>
	<string name="descSubmitSample">Is your bank not supported yet?</string>
	<string name="descInfoSite">Don\'t understand what this app does?</string>
	<string name="noMessageYet">You have not received any SMS code yet. (Note: SMS Key processes only newly received messages. Existing messages are not handled.)</string>
	<string name="ok">Ok</string>
	<string name="loading">Loading...</string><!-- I18N -->
	<string name="msgCheckForMessages">Please wait while analyzing your SMS inbox.</string><!-- I18N -->
	<string name="msgNoBankInCountry">It seems that there is no supported banks yet in your country. Click here to check out the full list online.</string><!-- I18N -->

	<!-- About -->
	<string name="aboutId">SMS Key TM</string>
	<string name="aboutDesc">The SMS Key is a product of the BankDroid open source project. Developed by voluntary programmers.</string>
	<string name="aboutDesc2">If you experience any problem with this application or if you would like to see some new features, feel free to contact us.</string>
	<string name="aboutUrl2">www.bankdroid.info</string>
	<string name="donateButton">Donate</string>
	<string name="donateButtonDesc">Help me on direct cost via PayPal</string>
	
	<!-- EULA -->
	<string name="eula_title">License</string>
	<string name="eula_accept">Accept</string>
	<string name="eula_refuse">Refuse</string>
	
	<!-- Campaign -->
	<string name="campaignRate">Rate SMS Key TM on Market and tell which bank you use!</string><!-- I18N -->
	<string name="campaignFacebook">Do you like the app? Show it to others on facebook...</string><!-- I18N -->
	<string name="campaignDonate1">More than 150 codes were displayed.</string><!-- I18N -->
	<string name="campaignDonate2">PayPal donate...</string>
	<string name="errorLog">Error log</string>


</resources>
