<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background3"
	>

	<include
		android:id="@+id/titleView"
		layout="@layout/titlebar"
		/>

	<!-- ***************** Button row ************** -->
	<LinearLayout
		android:id="@+id/buttonBar"
		android:background="@android:drawable/bottom_bar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		>
		<Button
			android:id="@+id/done"
			android:text="@string/btnDone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginTop="5px"
			/>
		<Button
			android:id="@+id/cancel"
			android:text="@string/btnCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginTop="5px"
			/>
	</LinearLayout>

<ScrollView
	android:id="@+id/scrollArea"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_below="@id/titleView"
	android:layout_above="@id/buttonBar"
	>
	
	<RelativeLayout 
		android:paddingRight="5sp"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>
		
			
		<!-- *********** TOP *********** -->
		
		<TextView
			style="@style/labelText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bankName"
			android:id="@+id/bankNameLabel"
			android:paddingLeft="5sp"
	
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			/>

		<EditText 
			android:singleLine="true"
			android:text="Raiffeisen Bank" 
			android:id="@+id/bankName"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:layout_below="@id/bankNameLabel"	
			/>
		
		<View
			android:id="@+id/bankNameSeparator"
			android:background="@color/darkBrown"
			android:layout_width="fill_parent"
			android:layout_height="1sp"
			android:layout_below="@id/bankName"
			android:layout_marginLeft="5sp"
			android:layout_marginRight="5sp"
			/>
	
		<!-- *********** Phone Numbers *********** -->
	
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_input_add"
			android:id="@+id/addPhoneNumber"
			
			android:layout_below="@id/bankNameSeparator"
			android:layout_alignParentRight="true"
			/>
		
		<TextView
			style="@style/labelText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/phoneNumber"
			android:id="@+id/phoneNumberLabel"
			android:paddingLeft="5sp"
	
			android:layout_below="@id/bankNameSeparator"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/addPhoneNumber"
			android:layout_alignTop="@id/addPhoneNumber"
			android:layout_alignBottom="@id/addPhoneNumber"
			android:gravity="center_vertical"
			/>
			
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_delete"
			android:id="@+id/removePhoneNumber3"
			
			android:layout_below="@id/addPhoneNumber"
			android:layout_alignParentRight="true"
			/>
	
		<EditText 
			android:text="Phone number3" 
			android:id="@+id/phoneNumber3"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
	
			android:layout_marginLeft="5px"
			android:layout_alignTop="@id/removePhoneNumber3"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/removePhoneNumber3"		
			/>	
				
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_delete"
			android:id="@+id/removePhoneNumber2"
			
			android:layout_below="@id/removePhoneNumber3"
			android:layout_alignParentRight="true"
			/>
	
		<EditText 
			android:text="Phone number2" 
			android:id="@+id/phoneNumber2"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
	
			android:layout_marginLeft="5px"
			android:layout_alignTop="@id/removePhoneNumber2"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/removePhoneNumber2"		
			/>
	
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_delete"
			android:id="@+id/removePhoneNumber1"
			
			android:layout_below="@id/removePhoneNumber2"
			android:layout_alignParentRight="true"
			/>
	
		<EditText 
			android:text="Phone number1" 
			android:id="@+id/phoneNumber1"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
	
			android:layout_marginLeft="5px"
			android:layout_alignTop="@id/removePhoneNumber1"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/removePhoneNumber1"		
			/>
	
		<View
			android:id="@+id/phoneNumberSeparator"
			android:background="@color/darkBrown"
			android:layout_width="fill_parent"
			android:layout_height="1sp"
			android:layout_below="@id/removePhoneNumber1"
			android:layout_marginLeft="5sp"
			android:layout_marginRight="5sp"
			/>
	
		<!-- *********** Patterns *********** -->
	
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_input_add"
			android:id="@+id/addPattern"
			
			android:layout_below="@id/phoneNumberSeparator"
			android:layout_alignParentRight="true"
			/>
		
		<TextView
			style="@style/labelText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/messagePatterns"
			android:id="@+id/patternLabel"
			android:paddingLeft="5sp"
	
			android:layout_below="@id/phoneNumberSeparator"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/addPattern"
			android:layout_alignTop="@id/addPattern"
			android:layout_alignBottom="@id/addPattern"
			android:gravity="center_vertical"
			/>
			
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_delete"
			android:id="@+id/removePattern3"
			
			android:layout_below="@id/addPattern"
			android:layout_alignParentRight="true"
			/>
	
		<EditText 
			android:text="Message pattern3" 
			android:id="@+id/pattern3"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:singleLine="true"
	
			android:layout_marginLeft="5px"
			android:layout_alignTop="@id/removePattern3"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/removePattern3"		
			/>
	
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_delete"
			android:id="@+id/removePattern2"
			
			android:layout_below="@id/removePattern3"
			android:layout_alignParentRight="true"
			/>
	
		<EditText 
			android:text="Message pattern2" 
			android:id="@+id/pattern2"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:singleLine="true"
	
			android:layout_marginLeft="5px"
			android:layout_alignTop="@id/removePattern2"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/removePattern2"		
			/>
	
		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:src="@android:drawable/ic_delete"
			android:id="@+id/removePattern1"
			
			android:layout_below="@id/removePattern2"
			android:layout_alignParentRight="true"
			/>
	
		<EditText 
			android:text="Message pattern1" 
			android:id="@+id/pattern1"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:singleLine="true"
	
			android:layout_marginLeft="5px"
			android:layout_alignTop="@id/removePattern1"
			android:layout_alignParentLeft="true"
			android:layout_toLeftOf="@id/removePattern1"		
			/>
	
		<View
			android:id="@+id/patternSeparator"
			android:background="@color/darkBrown"
			android:layout_width="fill_parent"
			android:layout_height="1sp"
			android:layout_below="@id/removePattern1"
			android:layout_marginLeft="5sp"
			android:layout_marginRight="5sp"
			/>

		<!-- ************** Expiry ***************** -->
	
		<EditText 
			android:text="Expiry in Seconds" 
			android:id="@+id/expiry"
			android:layout_width="120dp" 
			android:layout_height="wrap_content"
			android:inputType="number"
	
			android:layout_marginLeft="5px"
			android:layout_below="@id/patternSeparator"
			android:layout_alignParentRight="true"
			/>
	
		<TextView
			style="@style/labelText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/expiry"
			android:id="@+id/expiryLabel"
			android:paddingLeft="5sp"
	
			android:layout_below="@id/patternSeparator"
			android:layout_alignParentLeft="true"
			android:layout_alignTop="@id/expiry"
			android:layout_alignBottom="@id/expiry"
			android:layout_toLeftOf="@id/expiry"
			android:gravity="center_vertical"
			/>
	
	</RelativeLayout>
</ScrollView>

</RelativeLayout>
